fix: specify Node.js 18.x for Vercel deployment
- Added .nvmrc file with Node.js 18
- Added engines.node to package.json
- Added nodeVersion to vercel.json
- Should ensure consistent Node.js version on Vercel

--- a/package.json
+++ b/package.json
@@ -56,5 +56,8 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.9.3",
     "typescript-eslint": "^8.52.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
