feat: add DigitalOcean App Platform configuration
- Added do-app.yaml for App Platform deployment
- Updated next.config.js for production compatibility
- Added start.sh script for production startup
- Updated package.json with postinstall script
- Ready for DigitalOcean deployment

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "lint:check": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "lint:check": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "latest",
